--- a/metadata.yaml
+++ b/metadata.yaml
@@ -31,5 +31,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcc 'PH'
 - !lcsh 'Finnish drama'
+- GITenberg
 title: Anna Liisa; Kotoa pois
 url: http://www.gutenberg.org/ebooks/13173
